--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/moment-adapter": "^6.0.0",
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.5",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.5",
+    "@angular/material-moment-adapter": "^12.2.5",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^12.0.0",
+    "animate.css": "~3.7.2",
+    "apexcharts": "^3.28.1",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
+    "mdb-ui-kit": "^3.9.0",
+    "ng-apexcharts": "^1.5.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
